[project]
name = "pocketkit"
version = "0.1.0"
description = "A small utility toolbox with optional modules"
readme = "README.md"
authors = [
    { name = "dfine", email = "coding@dfine.tech" }
]
requires-python = ">=3.13"
dependencies = []
license = { text = "MIT" }

[project.optional-dependencies]
nats = ["nats-py>=2.11,<3.0"]  

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
